# INF-3DP

./: .gitignore  LICENSE  README.md  dataio.py  diff_operators.py  level_collision.py  loss_functions.py  modules.py  pyproject.toml  readme.md  sdf_meshing.py  slice_meshing.py  slice_toolpath.py  slice_view_pcd.py  toolpath_utils.py  toolpath_vis.py  training.py  utils.py  vis.py
configs/: collision_config.yaml  fn_slice_config.yaml  infill_config.yaml  init_slice_config.yaml  level_config.yaml  sdf_config.yaml  temp.yaml  toolpath_config.yaml
contour_cuda/: ext.cpp  intersection.cu  isocontours.cu  setup.py
contour_cuda/includes/: utils.h
data/: bunnyz.xyz  fertilityz.xyz  rect_nozzle.ply  rect_nozzle_shell.xyz
exp_scripts/: test_collision.py  test_infill.py  test_levels.py  test_sdf.py  test_slice.py  toolpath.py  toy_tvsdf.py  train_collision.py  train_fs.py  train_height.py  train_infill.py  train_levels.py  train_sdf.py  train_slice.py
sdf_data/: bunnyz.xyz  fertilityz.xyz
